# Daily_Python_AI

./: Metaclasses and Data Classes in python.ipynb  PyWhatKit_DB.txt  README.md  main.py
00_helloworld_ai_api/: README.md  chat.py  config.py  gemini.py  gemini_utils.py  image_analysis.py  main.py
00_intro_Python/: Add_Two_Numbers.py  Fahrenheit.py  Fav_Animal.py  Square_of_Number.py
01_expressions/: Dice_Roll_Simulator.py  Mad_Libs.py  Mass-Energy.py
02_lists/: 01_add_many_number.py  02_double_list.py  04_flowing_with_data_structures.py  05_get_first_element.py  06_get_last_element.py  08_shorten.py
9 Projects by Sir Zia Khan/: guessgame_computer.py  password.py  website_15_minutes.py
Assignments 6/: Aggregation.py  Constructors_and_Destructors.py  Custom_Iterable.py  Mini_project.py  abstract.py  access.py  callable.py  class_decorators.py  class_method.py  class_variable.py  cls.py  composition.py  custom_exception.py  functiond_decorators.py  instance_methods.py  mro_dimond.py  public_variable.py  self.py  static_method.py  super_function.py
Book-Library-managment/: library_manager.py
Data_Types_Operators_Loops/: Data_Types.py  Data_Types_Operators_Loops.pptx  Loops.py  Operators.py
Examples of Is and In/: class_secound.py
First_Day_Python/: Calculator.py  DataTypes.py  To_Do_List.py
Guess_Number_Project/: Guess_Number.py  README.md
UV learn/project2/: pyproject.toml
UV learn/project3/: pyproject.toml
UV learn/project3/src/project3/: hello.py
UV learn/project6/: pyproject.toml
UV learn/project6/src/project6/: __init__.py
pytest/: cal.py  (+2 more)
(+65 files in other folders)
