[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "hamzapersnol321@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
project2 = "project2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
