[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "hamzapersnol321@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.63.11",
]

[project.scripts]
project3 = "project3:main"
gemini1 = "project3.hello:call_gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
