[project]
name = "project6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "hamzapersnol321@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.4.1",
]

[project.scripts]
project6 = "project6:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
